--- a/guestbook-deployment/container/Dockerfile
+++ b/guestbook-deployment/container/Dockerfile
@@ -1,35 +1,21 @@
 FROM amazonlinux:latest
 
-RUN yum update -y
-RUN yum install shadow-utils.x86_64 sudo -y
-RUN yum install -y git
-RUN yum install -y gcc-c++ make
-RUN curl -sL https://rpm.nodesource.com/setup_12.x | sudo -E bash -
+# Install system packages + nodejs
+RUN yum install -y git curl bash
+RUN curl -sL https://rpm.nodesource.com/setup_12.x | bash -
 RUN yum install -y nodejs
 
-RUN useradd -m -s /bin/bash ec2-user
-RUN echo "user ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/user && \
-    chmod 0440 /etc/sudoers.d/user
+# Cloning source from repository
+RUN echo "Downloading app"
+RUN git clone https://github.com/cvolkmer/cloud-deployment.git /home/cloud-deployment
 
-RUN chown ec2-user:ec2-user /home/ec2-user -R
-
-USER ec2-user
-
-RUN echo "Deploying app"
-
-RUN cd /home/ec2-user/
-
-# Deploy code
-RUN git clone https://github.com/cvolkmer/cloud-deployment.git /home/ec2-user/cloud-deployment
-
-# Install npm packages
-USER root
-RUN cd /home/ec2-user/cloud-deployment/guestbook-app/
-RUN cp /home/ec2-user/cloud-deployment/guestbook-app/package*.json /
+# Run npm to install packages
+RUN echo "Installing app*
+RUN cp /home/cloud-deployment/guestbook-app/package*.json /
 RUN npm install -d
 
 # Start the app
-CMD ["node", "home/ec2-user/cloud-deployment/guestbook-app/bin/www"]
+CMD ["node", "home/cloud-deployment/guestbook-app/bin/www"]
 
 EXPOSE 80
 
